[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazimp"
version = "0.0.4"
authors = [
    { name = "Dorian Turba", email = "dturba.pro@protonmail.com" },
]
description = "Lazy import of packages and modules"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/Vikka/lazimport"
"Bug Tracker" = "https://github.com/Vikka/lazimport/issues"
